# ai-video-generator

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  GET_LIVE_URL.md  LICENSE  Makefile  PROJECT_COMPLETE.md  Procfile  QUICKSTART.md  QUICK_DEPLOY.md  README.md  SMART_SEARCH_EXAMPLES.md  app.json  docker-compose.yml  fly.toml  nixpacks.toml  pyproject.toml  railway.json  railway.toml  render.yaml  start-local.sh
data/: jobs.json
data/music/: README.txt
src/: __init__.py
src/app/: __main__.py  web.py
src/app/static/: index.html  settings.html
src/core/: __init__.py  config.py  job_manager.py
src/services/: __init__.py  caption_generator.py  extreme_quality_enhancer.py  media_fetcher.py  media_verifier.py  music_selector.py  script_enhancer.py  smart_media_selector.py  video_generator.py  video_quality_enhancer.py  voiceover_manager.py
tests/: __init__.py  test_api.py  test_services.py
